# pairs_trading

./: README.md
pairs-trading/: DESCRIPTION.md  README.md  config.yaml  convert_csv_to_parquet.py  main.py  pyproject.toml
pairs-trading/pair_trading_project/artifacts/: backtest_metrics.json  signals_generator.joblib
pairs-trading/pair_trading_project/data/: backtest_data.csv  backtest_data.parquet  train_data.csv  train_data.parquet
pairs-trading/pair_trading_project/src/: ArbitragePortfolio.py  get_data.py  run_backtest.py  strategy.py  utils.py
