[tool.poetry]
name = "pair_trading_project"
version = "0.1.0"
description = "Pair trading strategy: LKOH / ROSN"
authors = ["Kliushnichenko Liya lia15022006@mail.ru]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = "^1.26.4"
pandas = "^2.2.0"
joblib = "^1.5.2"
sktime = "^0.40.1"
matplotlib = "^3.10.0"
vectorbt = "^0.28.4"
scipy = "^1.12.0"
requests = "^2.31.0"
pyyaml = "^6.0"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
